--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "vite-react-ts",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://anya-yarusova.github.io/Ecoservice",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,6 +19,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.9"
   }
