--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://anya-yarusova.github.io/Ecoservice",
   "scripts": {
     "predeploy": "next build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d .next",
     "start": "next start",
     "dev": "next dev",
     "build": "next build",
